Improve TaskConfiguration
* Improve EWSSyncTask
* Improve and refactor StarfaceSyncTask