@@ -1,72 +1,38 @@
 package de.waldorfaugsburg.psync.task.ews;
 
-import com.cronutils.model.Cron;
 import com.google.common.collect.ArrayListMultimap;
 import com.google.common.collect.Multimap;
-import com.google.gson.JsonArray;
-import com.google.gson.JsonElement;
-import com.google.gson.JsonObject;
 import de.waldorfaugsburg.psync.ProcuratSyncApplication;
 import de.waldorfaugsburg.psync.client.ews.EWSClient;
 import de.waldorfaugsburg.psync.client.procurat.ProcuratClient;
 import de.waldorfaugsburg.psync.client.procurat.model.*;
 import de.waldorfaugsburg.psync.task.AbstractSyncTask;
 import lombok.extern.slf4j.Slf4j;
+import microsoft.exchange.webservices.data.core.enumeration.property.EmailAddressKey;
 import microsoft.exchange.webservices.data.core.service.item.Contact;
+import microsoft.exchange.webservices.data.misc.OutParam;
+import microsoft.exchange.webservices.data.property.complex.EmailAddress;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
 @Slf4j
-public class EWSSyncTask extends AbstractSyncTask {
+public class EWSSyncTask extends AbstractSyncTask<EWSSyncTaskConfiguration> {
 
-    public EWSSyncTask(final ProcuratSyncApplication application, final Cron interval, final JsonObject customData) {
-        super(application, interval, customData);
+    public EWSSyncTask(final ProcuratSyncApplication application, final EWSSyncTaskConfiguration configuration) {
+        super(application, configuration);
     }
 
     @Override
     public void run() throws Exception {
         final ProcuratClient procuratClient = getApplication().getProcuratClient();
+        final List<ProcuratGroupMembership> rootGroupMemberships = procuratClient.getRootGroupMemberships();
 
-        final Multimap<String, Integer> personIdGroupMultimap = ArrayListMultimap.create();
-        final JsonArray groups = getCustomData().get("groups").getAsJsonArray();
-        for (final JsonElement element : groups) {
-            List<Integer> persons = new ArrayList<>();
-
-            final JsonObject groupObject = element.getAsJsonObject();
-            final String name = groupObject.get("name").getAsString();
-
-            // Add group members
-            final JsonArray groupIds = groupObject.getAsJsonArray("groupIds");
-            for (final JsonElement groupId : groupIds) {
-                for (final ProcuratGroupMembership membership : procuratClient.getGroupMemberships(groupId.getAsInt())) {
-                    persons.add(membership.getPersonId());
-                }
-            }
-
-            // Add correspondence persons for group members
-            final JsonArray correspondenceGroupIds = groupObject.getAsJsonArray("correspondenceGroupIds");
-            for (final JsonElement groupId : correspondenceGroupIds) {
-                for (final ProcuratGroupMembership membership : procuratClient.getGroupMemberships(groupId.getAsInt())) {
-                    for (final ProcuratCommunication communication : procuratClient.getCommunicationsByPersonId(membership.getPersonId())) {
-                        persons.add(communication.getContactPersonId());
-                    }
-                }
-            }
-
-            // Add specific persons
-            final JsonArray personIds = groupObject.getAsJsonArray("personIds");
-            for (final JsonElement personId : personIds) {
-                persons.add(personId.getAsInt());
-            }
-
-            // Remove possible duplicate persons
-            persons = persons.stream().distinct().collect(Collectors.toList());
-
-            personIdGroupMultimap.putAll(name, persons);
+        final Multimap<EWSSyncTaskConfiguration.ContactGroup, EWSSyncTaskConfiguration.Selector> selectorGroupMap = ArrayListMultimap.create();
+        for (final EWSSyncTaskConfiguration.ContactGroup group : getConfiguration().getGroups()) {
+            selectorGroupMap.putAll(group, accumulateSelectors(procuratClient, group).stream().distinct().toList());
         }
 
-        log.info("Aggregated a total of {} persons in {} groups for synchronisation", personIdGroupMultimap.values().size(), personIdGroupMultimap.keySet().size());
+        log.info("Aggregated a total of {} persons in {} groups for synchronisation", selectorGroupMap.values().size(), selectorGroupMap.keySet().size());
 
         final EWSClient ewsClient = getApplication().getEwsClient();
         if (!ewsClient.deleteAllContacts()) {
@@ -74,31 +40,51 @@ public class EWSSyncTask extends AbstractSyncTask {
         }
 
         final Map<Integer, Contact> contactMap = new HashMap<>();
-        for (final String groupName : personIdGroupMultimap.keySet()) {
-            final Collection<Integer> personIds = personIdGroupMultimap.get(groupName);
-            log.info("Starting with group {} ({} members)", groupName, personIds.size());
+        for (final EWSSyncTaskConfiguration.ContactGroup group : selectorGroupMap.keySet()) {
+            final Collection<EWSSyncTaskConfiguration.Selector> selectors = selectorGroupMap.get(group);
+            log.info("Starting with group {} ({} members)", group.getName(), selectors.size());
 
-            final List<Contact> contacts = new ArrayList<>();
-            for (final Integer personId : personIds) {
-                final ProcuratPerson person = procuratClient.getPersonById(personId);
-                Contact contact = contactMap.get(personId);
+            final Map<String, String> contactEmailMap = new HashMap<>();
+            for (final EWSSyncTaskConfiguration.Selector selector : selectors) {
+                final ProcuratPerson person = procuratClient.getPersonById(selector.getId());
+                Contact contact = contactMap.get(person.getId());
                 if (contact == null) {
-                    contact = createContact(procuratClient, ewsClient, person);
-                    contactMap.put(personId, contact);
+                    contact = createContact(procuratClient, ewsClient, rootGroupMemberships, person);
+                    contactMap.put(person.getId(), contact);
                 }
-                contacts.add(contact);
+
+                final String emailTypeString = selector.getEmailType();
+                if (emailTypeString.equals("private")) {
+                    final OutParam<EmailAddress> outParam = new OutParam<>();
+                    if (contact.getEmailAddresses().tryGetValue(EmailAddressKey.EmailAddress1, outParam)) {
+                        contactEmailMap.put(contact.getDisplayName(), outParam.getParam().getAddress());
+                    }
+                } else if (emailTypeString.equals("work")) {
+                    final OutParam<EmailAddress> outParam = new OutParam<>();
+                    if (contact.getEmailAddresses().tryGetValue(EmailAddressKey.EmailAddress2, outParam)) {
+                        contactEmailMap.put(contact.getDisplayName(), outParam.getParam().getAddress());
+                    }
+                }
+            }
+
+            // Add extra addresses
+            final Map<String, String> extraAddresses = group.getExtraAddresses();
+            if (extraAddresses != null) {
+                contactEmailMap.putAll(group.getExtraAddresses());
             }
 
             Thread.sleep(2000);
-            ewsClient.createContactGroup(groupName, contacts);
+            ewsClient.createContactGroup(group.getName(), contactEmailMap);
         }
     }
 
-    private Contact createContact(final ProcuratClient procuratClient, final EWSClient ewsClient, final ProcuratPerson person) {
-        String email = null;
+    private Contact createContact(final ProcuratClient procuratClient, final EWSClient ewsClient, final List<ProcuratGroupMembership> rootMemberships, final ProcuratPerson person) {
+        String workEmail = null;
+        String privateEmail = null;
         String homePhone = null;
         String mobilePhone = null;
 
+        // Address contact information
         final List<ProcuratContactInformation> addressContactInfo = procuratClient.getContactInformationByAddressId(person.getAddressId());
         for (final ProcuratContactInformation addressInfo : addressContactInfo) {
             if (!addressInfo.getMedium().equals("telephone")) continue;
@@ -107,10 +93,16 @@ public class EWSSyncTask extends AbstractSyncTask {
             break;
         }
 
+        // Personal contact information
         final List<ProcuratContactInformation> personContactInfo = procuratClient.getContactInformationByPersonId(person.getId());
         for (final ProcuratContactInformation personInfo : personContactInfo) {
-            if (email == null && personInfo.getOrder() == 1 && personInfo.getMedium().equals("email")) {
-                email = personInfo.getContent();
+            if (workEmail == null && personInfo.getOrder() == 1 && personInfo.getMedium().equals("email") && personInfo.getType().equals("work")) {
+                workEmail = personInfo.getContent();
+                continue;
+            }
+
+            if (privateEmail == null && personInfo.getOrder() == 1 && personInfo.getMedium().equals("email") && personInfo.getType().equals("private")) {
+                privateEmail = personInfo.getContent();
                 continue;
             }
 
@@ -119,8 +111,79 @@ public class EWSSyncTask extends AbstractSyncTask {
             }
         }
 
+        // Note (in contact body)
+        final StringBuilder noteBuilder = new StringBuilder();
+        noteBuilder.append("<h1>Person</h1>");
+        noteBuilder.append("Personennummer: ").append(person.getId()).append("<br>");
+        noteBuilder.append("Anschriftnummer: ").append(person.getAddressId()).append("<br>");
+
+        boolean parent = false;
+        if (person.getFamilyRole().equals("mother")) {
+            parent = true;
+            noteBuilder.append("<h1>Familie</h1>");
+            noteBuilder.append("Familienrolle: Mutter").append("<br>");
+        }
+
+        if (person.getFamilyRole().equals("father")) {
+            parent = true;
+            noteBuilder.append("<h1>Familie</h1>");
+            noteBuilder.append("Familienrolle: Vater").append("<br>");
+        }
+
+        if (parent) {
+            noteBuilder.append("Weitere Familienmitglieder:");
+            noteBuilder.append("<ul>");
+            final List<ProcuratPerson> persons = procuratClient.getPersonsByFamilyId(person.getFamilyId());
+            for (final ProcuratPerson familyPerson : persons) {
+                if (familyPerson.getId() == person.getId()) continue;
+                if (!procuratClient.isPersonActiveMember(rootMemberships, familyPerson)) continue;
+
+                noteBuilder.append("<li>");
+                switch (familyPerson.getFamilyRole()) {
+                    case "mother" -> noteBuilder.append("Mutter: ");
+                    case "father" -> noteBuilder.append("Vater: ");
+                    case "child" -> noteBuilder.append("Kind: ");
+                }
+
+                noteBuilder.append(familyPerson.getFirstName())
+                        .append(" ")
+                        .append(familyPerson.getLastName());
+
+                final String namedGroupName = procuratClient.getNamedGroupName(familyPerson.getId());
+                if(namedGroupName != null) {
+                    noteBuilder.append(" (").append(namedGroupName).append(")");
+                }
+                noteBuilder.append("</li>");
+            }
+            noteBuilder.append("</ul>");
+        }
+
         final ProcuratAddress address = procuratClient.getAddressById(person.getAddressId());
-        return ewsClient.createContact(person.getId(), person.getFirstName(), person.getLastName(), email, homePhone, mobilePhone, address.getCity(), address.getZip(), address.getStreet(), "");
+        return ewsClient.createContact(person.getId(), person.getFirstName(), person.getLastName(), privateEmail, workEmail, homePhone, mobilePhone, address.getCity(), address.getZip(), address.getStreet(), noteBuilder.toString());
+    }
+
+    private List<EWSSyncTaskConfiguration.Selector> accumulateSelectors(final ProcuratClient client, final EWSSyncTaskConfiguration.ContactGroup group) {
+        final List<EWSSyncTaskConfiguration.Selector> selectors = new ArrayList<>();
+
+        // Add group members
+        for (final EWSSyncTaskConfiguration.Selector selector : group.getGroups()) {
+            for (final ProcuratGroupMembership membership : client.getGroupMemberships(selector.getId())) {
+                selectors.add(new EWSSyncTaskConfiguration.Selector(selector, membership.getPersonId()));
+            }
+        }
+
+        // Add correspondence persons for group members
+        for (final EWSSyncTaskConfiguration.Selector selector : group.getCorrespondenceGroups()) {
+            for (final ProcuratGroupMembership membership : client.getGroupMemberships(selector.getId())) {
+                for (final ProcuratCommunication communication : client.getCommunicationsByPersonId(membership.getPersonId())) {
+                    selectors.add(new EWSSyncTaskConfiguration.Selector(selector, communication.getContactPersonId()));
+                }
+            }
+        }
+
+        // Specific persons
+        selectors.addAll(group.getPersons());
+        return selectors;
     }
 
     private String normalizePhoneNumber(final String phoneNumber) {
